Revision history for Alt::DhMakePerl::installable

          - Added Test::Compile to build requirements
          - Added sudo apt-get update to Travis config
          - Added test for supported operating systems
          - Added libapt-pkg-dev install to Travis
          - Added test for required libraries
          - Added public repository
          - Added some standard author tests
          - Dropped calls to Locale::gettext coz it's dead
          - Changed Dynaloader expect version to make Alt-DhMakePerl-installable
          - Replaced hardcoded path with File::ShareDir

0.1.1     2015-01-15 23:25:50
          - Added project files to master branch
