@@ -1,5 +1,6 @@
 Revision history for Alt::DhMakePerl::installable
 
+          - Added Travis badge
           - Added Test::Compile to build requirements
           - Added sudo apt-get update to Travis config
           - Added test for supported operating systems
